# better-sensitivity-v3

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: dobby.h  shadowhook.h  version_offsets.h
src/: main.cpp
